--- a/indoorbeach/27-oktober.html
+++ b/indoorbeach/27-oktober.html
@@ -44,13 +44,14 @@
 
 				<!-- Menu -->
 				<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Toernooien</a></li>
-							<li><a href="ranking2019-2020.html">Ranking 2019 - 2020</a></li>
-							<li><a href="about.html">Over Belgium Winter Beachvolley</a></li>
-						</ul>
-					</nav>
+					<h2>Menu</h2>
+					<ul>
+						<li><a href="index.html">Toernooien</a></li>
+						<li><a href="ranking2019-2020.html">Ranking 2019 - 2020</a></li>
+						<li><a href="info.html">Meer informatie</a></li>
+						<li><a href="about.html">Over Belgium Winter Beachvolley</a></li>
+					</ul>
+				</nav>
 
 				<!-- Main -->
 					<div id="main">
@@ -98,30 +99,30 @@
 
 				<!-- Footer -->
                 <footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Contacteer ons</h2>
-								<div class="row">
-										<div class="col-6 col-12-medium">
-								<p><strong>Jeroen Sannen</strong><br><a target="_blank" href="http://m.me/jeroen.sannen">Facebook</a> of <a target="_blank" href="https://wa.me/32472970583">WhatsApp</a><br>+32 472 97 05 83</p>
-								</div>
-								<div class="col-6 col-12-medium">
-								<p><strong>Tim Kermans</strong><br><a target="_blank" href="http://m.me/tim.kermans">Facebook</a> of <a target="_blank" href="https://wa.me/32496200104">WhatsApp</a><br>+32 496 20 01 04</p>
-								</div>
-							</section>
-							<section>
-								<h2>Volg ons</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Belgium Winter Beachvolley</li><li>Made by <a href="http://jeroensannen.be">JS</a></li>
+					<div class="inner">
+						<section>
+							<h2>Contacteer ons</h2>
+							<div class="row">
+									<div class="col-6 col-12-medium">
+							<p><strong>Jeroen Sannen</strong><br><a target="_blank" href="http://m.me/jeroen.sannen">Facebook</a> of <a target="_blank" href="https://wa.me/32472970583">WhatsApp</a><br>+32 472 97 05 83</p>
+							</div>
+							<div class="col-6 col-12-medium">
+							<p><strong>Tim Kermans</strong><br><a target="_blank" href="http://m.me/tim.kermans">Facebook</a> of <a target="_blank" href="https://wa.me/32496200104">WhatsApp</a><br>+32 496 20 01 04</p>
+							</div>
+						</section>
+						<section>
+							<h2>Volg ons</h2>
+							<ul class="icons">
+								<!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
+								<li><a href="https://www.facebook.com/Belgiumindoorbeachvolley/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
 							</ul>
-						</div>
-					</footer>
+						</section>
+						<ul class="copyright">
+							<li>&copy; Belgium Winter Beachvolley</li><li>Made by <a href="http://jeroensannen.be">JS</a></li>
+						</ul>
+					</div>
+				</footer>
 
 			</div>
 
