--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -45,7 +45,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Belgium Winter Beachvolley is de eerste volwaardige indoor beachvolleybal competitie met 3 verschillende reeksen per dag voor beachvolley liefhebbers van Belgisch, provinciaal of recreatief niveau.</h1>
+								<h1>Belgium Winter Beachvolley is de eerste Belgische indoor beachvolleybal competitie met 3 verschillende reeksen per dag voor beachvolley liefhebbers van Belgisch, provinciaal of recreatief niveau.</h1>
 								<span class="image main"><img src="images/banner.png" alt="" /></span>
 								<p>Wat? Beachvolleybal is toch enkel iets voor in de zomer? No way, hosay! Dit splinternieuwe concept <strong>brengt de zomer naar je toe</strong> tijdens die druilerige Belgische winterdagen! Verspreid over <strong>2 unieke indoor beachvolleybal accomocaties</strong> in België organiseren we <strong>elke 2de en 4de zondag van de maand</strong> 3 reeksen per toernooidag: Een <strong>Heren Belgisch/provinciaal</strong>, een <strong>Dames Belgisch/provinciaal</strong> en een <strong>Gemengd Recreatief</strong> reeks. 
 									Voor een <strong>erg scherpe prijs</strong> speel je in een goed verlichte, verwarmde hal met aangename douches. Je speelt voldoende wedstrijden die perfect aansluiten bij het niveau dat je aangeeft. Even enthousiast als ons? Klik op een toernooi en <strong>schrijf je nu in</strong>! Nog niet overtuigd? <a href="info.html">Meer informatie over dit geweldige concept</a>.</p>
