--- a/indoorbeach/ranking2019-2020.html
+++ b/indoorbeach/ranking2019-2020.html
@@ -37,13 +37,14 @@
 
 				<!-- Menu -->
                 <nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Toernooien</a></li>
-							<li><a href="ranking2019-2020.html">Ranking 2019 - 2020</a></li>
-							<li><a href="about.html">Over Belgium Winter Beachvolley</a></li>
-						</ul>
-					</nav>
+                    <h2>Menu</h2>
+                    <ul>
+                        <li><a href="index.html">Toernooien</a></li>
+                        <li><a href="ranking2019-2020.html">Ranking 2019 - 2020</a></li>
+                        <li><a href="info.html">Meer informatie</a></li>
+                        <li><a href="about.html">Over Belgium Winter Beachvolley</a></li>
+                    </ul>
+                </nav>
 
 				<!-- Main -->
 					<div id="main">
@@ -55,10 +56,11 @@
                             <ol>
                                 <li>Doe zoveel mogelijk <a href="index.html">toernooien</a> mee en probeer zo hoog mogelijk te eindigen!</li>
                                 <li>Bij elke deelname levert een laatste plaats 20 punten op per persoon. Een voorlaatste plaats 40 punten, de 3de laatste plaats 60 punten en zo verder. Wanneer er 6 teams deelnemen krijgen de winnaars dus 120 punten per persoon, de 2des 100 punten per persoon en zo verder. Het aantal punten schaalt dus met het aantal deelnemers: Op een toernooi met 12 deelnemers (het maximum) vallen er dus 240 punten per persoon te verdienen!</li>
-                                <li>Blijk je na het laatste toernooi op 22 maart het hoogste aantal punten te hebben? Proficiat! De prijsuitreiking volgt vrijwel meteen na afloop van het laatste toernooi. Niet aanwezig op het laatste toernooi maar toch gewonnen? We proberen iets te regelen voor jou!</li>
+                                <li>Blijk je na het laatste toernooi op 22 maart het hoogste aantal punten te hebben? Proficiat! De prijsuitreiking volgt vrijwel meteen na afloop van het laatste toernooi. Niet aanwezig op het laatste toernooi maar toch gewonnen? Je kan je prijs op een later tijdstip afhalen bij de organisatie.</li>
                             </ol>
                             <h2>Top 10 Dames Belgisch/provinciaal 2019 -2020</h2>
-                            <div class="table-wrapper">
+                            <p>Nog geen ranking beschikbaar.</p>
+                            <!-- <div class="table-wrapper">
                                     <table>
                                         <thead>
                                             <tr>
@@ -95,9 +97,10 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                </div>
+                                </div> -->
                             <h2>Top 10 Heren Belgisch/provinciaal 2019 - 2020</h2>
-                            <div class="table-wrapper">
+                            <p>Nog geen ranking beschikbaar.</p>
+                            <!-- <div class="table-wrapper">
                                     <table>
                                         <thead>
                                             <tr>
@@ -134,36 +137,36 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                </div>
+                                </div> -->
 						</div>
 					</div>
 
 				<!-- Footer -->
                 <footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Contacteer ons</h2>
-								<div class="row">
-										<div class="col-6 col-12-medium">
-								<p><strong>Jeroen Sannen</strong><br><a target="_blank" href="http://m.me/jeroen.sannen">Facebook</a> of <a target="_blank" href="https://wa.me/32472970583">WhatsApp</a><br>+32 472 97 05 83</p>
-								</div>
-								<div class="col-6 col-12-medium">
-								<p><strong>Tim Kermans</strong><br><a target="_blank" href="http://m.me/tim.kermans">Facebook</a> of <a target="_blank" href="https://wa.me/32496200104">WhatsApp</a><br>+32 496 20 01 04</p>
-								</div>
-							</section>
-							<section>
-								<h2>Volg ons</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Belgium Winter Beachvolley</li><li>Made by <a href="http://jeroensannen.be">JS</a></li>
-							</ul>
-						</div>
-					</footer>
+                    <div class="inner">
+                        <section>
+                            <h2>Contacteer ons</h2>
+                            <div class="row">
+                                    <div class="col-6 col-12-medium">
+                            <p><strong>Jeroen Sannen</strong><br><a target="_blank" href="http://m.me/jeroen.sannen">Facebook</a> of <a target="_blank" href="https://wa.me/32472970583">WhatsApp</a><br>+32 472 97 05 83</p>
+                            </div>
+                            <div class="col-6 col-12-medium">
+                            <p><strong>Tim Kermans</strong><br><a target="_blank" href="http://m.me/tim.kermans">Facebook</a> of <a target="_blank" href="https://wa.me/32496200104">WhatsApp</a><br>+32 496 20 01 04</p>
+                            </div>
+                        </section>
+                        <section>
+                            <h2>Volg ons</h2>
+                            <ul class="icons">
+                                <!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
+                                <li><a href="https://www.facebook.com/Belgiumindoorbeachvolley/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+                                <!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
+                            </ul>
+                        </section>
+                        <ul class="copyright">
+                            <li>&copy; Belgium Winter Beachvolley</li><li>Made by <a href="http://jeroensannen.be">JS</a></li>
+                        </ul>
+                    </div>
+                </footer>
 
 			</div>
 
