--- a/indoorbeach/info.html
+++ b/indoorbeach/info.html
@@ -37,25 +37,35 @@
 
 				<!-- Menu -->
                 <nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Toernooien</a></li>
-							<li><a href="ranking2019-2020.html">Ranking 2019 - 2020</a></li>
-							<li><a href="about.html">Over Belgium Winter Beachvolley</a></li>
-						</ul>
-					</nav>
+					<h2>Menu</h2>
+					<ul>
+						<li><a href="index.html">Toernooien</a></li>
+						<li><a href="ranking2019-2020.html">Ranking 2019 - 2020</a></li>
+						<li><a href="info.html">Meer informatie</a></li>
+						<li><a href="about.html">Over Belgium Winter Beachvolley</a></li>
+					</ul>
+				</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
 							<h1>Meer informatie</h1>
-                            <span class="image main"><img src="images/banner.png" alt="" /></span>
+							<span class="image main"><img src="images/banner.png" alt="" /></span>
+							<p>Wij geloven in open communicatie, daarom informeren we graag iedereen die nog met vragen zit over het Belgium Winter Beachvolley via deze pagina.</p>
+							<h2>Toernooi</h2>
+							<ul>
+								<li>Ten laatste een dag voor het toernooi krijg je een wedstrijdschema en alle andere relevante info via mail toegestuurd.</li>
+								<li>We vragen vriendelijk dat je een poging doet om een 30 tal minuten voor de start van je eerste wedstrijd aanwezig te zijn. Er kan uiteraard altijd iets mislopen: Verwittig in dat geval zo snel mogelijk de organisatie! Dan moeten andere mensen niet nodeloos wachten omdat je te laat bent.</li>
+								<li>Drank en eten is ter plaatse te verkrijgen aan democratische prijzen.</li>
+							</ul>
                             <h2>Inschrijving</h2>
                             <ul>
                                 <li>We weten dat je heel enthousiast bent, maar inschrijven kan pas vanaf een maand voorafgaand aan een toernooi.</li>
                                 <li>Ben je een late beslisser? Inschrijven voor een toernooi kan tot vrijdag 12:00u, de week van het toernooi.</li>
                                 <li>Ter plaatse betalen is niet mogelijk. Een team dat niet op voorhand betaald heeft wordt gezien als een team dat niet meedoet aan het toernooi. Hier staan we helaas geen uitzonderingen op toe, betaal dus op tijd!</li>
-                            </ul>
+								<li>Waarom werken onze betalingen op deze manier? We proberen dure betalingssystemen te vermijden want dit levert enkel maar meer kosten op voor ons. Deze kosten zouden we moeten doorrekenen aan de mensen die inschrijven. Op deze manier houden we het inschrijvingsgeld laag.</li>
+								<li>35 EUR is toch niet weinig geld voor een beachvolleybal toernooi? Jawel! Hou er rekening mee dat we binnen spelen in een verwarmde hal met verlichting en douches. De uitbater van deze hal maakt dus een hoop kosten. De toernooi organisatie maakt (helaas) 0.0 EUR winst, al het inschrijvingsgeld gaat rechtstreeks naar de accomodaties en 2 (bescheiden) prijzen voor de BEL/prov reeksen.</li>
+							</ul>
                             <h2>Locaties</h2>
                             <ul>
                                 <li>We hebben twee toplocaties: <a target="_blank" href="https://goo.gl/maps/ak3FTDDHkrD5f6i98">Outdoorcentrum Schaffen</a> (wel degelijk indoor) en <a target="_blank" href="https://goo.gl/maps/fw2rj6dYLXP2LW2XA">TC De Pollepel</a> (meer dan alleen tennis).</li>
@@ -64,45 +74,49 @@
                             </ul>
                             <h2>Reglement Belgisch/provinciaal reeks</h2>
                             <ul>
-                                <li>We spelen met strikte beachvolleybalregels maar zonder scheidsrechter. We rekenen op de sportiviteit van onze deelnemers, bij discussie spelen we het punt opnieuw.</li>
-                                <li>De startranking (seeds) wordt opgemaakt aan de hand van de punten behaald op andere toernooien.</li>
-                                <li>De dagwinnaars van deze reeksen ontvangen elk een bon die 17,5 EUR korting geeft op een deelname aan het eerstvolgende Belgium Winter Beachvolley toernooi (in dezelfde reeks)! Zo kan je samen gratis deelnemen aan het volgende toernooi. Of je partner kan heiligschennis plegen en een nieuw team vormen aan halve prijs wanneer je zelf niet kan, nice! Helaas zijn deze bonnen op naam en dus niet overdraagbaar aan andere mensen. Ook zijn ze enkel te gebruiken voor het eerstvolgende toernooi en niet de toernooien erna. Het specifieke toernooi en de reeks waarvoor je korting krijgt staat aangegeven op je bon.</li>
-                                <li>Wedstrijdschemas afhankelijk van inschrijvingen</li>
+								<li>We spelen met de <a target="_blank" href="https://www.fivb.org/EN/Refereeing-Rules/RulesOfTheGame_BVB.asp">strikte beachvolleybalregels</a> die worden toegepast op Belgisch en FIVB niveau. Weet je niet zeker wat we hier mee bedoelen, dan is deze reeks waarschijnlijk niet voor jou! Alle wedstrijden worden gespeeld naar 2 winnende sets tot 21 met een beslissende set tot 15, telkens met 2 punten verschil. Helaas spelen we zonder scheidsrechters: We rekenen op de sportiviteit van onze deelnemers. We zijn (hopelijk) allemaal volwassen mensen, bij discussie spelen we het punt gewoon opnieuw.</li>
+								<li>Wedstrijdschemas zijn afhankelijk van het aantal inschrijvingen en de behaalde punten per team. We hebben vaste schema's liggen die eerlijkheid, aantal wedstrijden en plezier optimaliseren. Voor inspiratie kijken we vooral naar het Belgisch Kampioenschap en FIVB toernooi formules. Heb je het gevoel dat we iets fout doen, laat het ons weten!</li>
+								<li>Voor het eerste toernooi van het seizoen delen we het schema willekeurig in (geen gefoetel, we promise). Iedereen gelijk voor de wet dus!</li>
+                                <li>Vanaf het 2de toernooi wordt het schema opgemaakt aan de hand van de opgetelde individuele punten per speler, behaald op alle voorgaande Belgium Winter Beachvolley toernooien. Iedereen start dus "gelijk" voor het eerste toernooi want de loting is random. Na het eerste toernooi zijn alle "nieuwe" deelnemers die meedoen "NG" (niet geklasseerd) en worden ze met 0 punten (vermoedelijk ergens onderaan) in het schema gezet.</li>
+								<li>De individuele puntentelling werkt op deze manier: Bij elke deelname levert een laatste plaats 20 punten op per persoon. Een voorlaatste plaats 40 punten, de 3de laatste plaats 60 punten en zo verder. Wanneer er 6 teams deelnemen krijgen de winnaars dus 120 punten per persoon, de 2des 100 punten per persoon en zo verder. Het aantal punten schaalt dus met het aantal deelnemers: Op een toernooi met 12 deelnemers (het maximum) vallen er dus 240 punten per persoon te verdienen!</li>
+								<li>De dagwinnaars van deze reeksen ontvangen elk een bon die 17,5 EUR korting geeft op een deelname aan het eerstvolgende Belgium Winter Beachvolley toernooi (in dezelfde reeks)! Zo kan je samen gratis deelnemen aan het volgende toernooi. Of je partner kan heiligschennis plegen en een nieuw team vormen aan halve prijs wanneer je zelf niet kan, nice! Helaas zijn deze bonnen op naam en dus niet overdraagbaar aan andere mensen. Ook zijn ze enkel te gebruiken voor het eerstvolgende toernooi en niet de toernooien erna. Het specifieke toernooi en de reeks waarvoor je korting krijgt staat aangegeven op je bon.</li>
                             </ul>
                             <h2>Reglement Gemengd recreatief reeks</h2>
                             <ul>
-                                <li>We spelen zonder strikte beachvolleybalregels</li>
-                                <li>Wedstrijdschemas met maximale fun</li>
+								<li>Alle combinaties van mannen en vrouwen zijn toegelaten. Je mag je dus perfect inschrijven als recreatief mannen team om dan waarschijnlijk slaag te krijgen van 2 vrouwen en zo met het schaamrood op de wangen naar huis te gaan.</li>
+                                <li>We spelen zonder strikte beachvolleybalregels. Uiteraard proberen we wel de regels van het zaalvolleybal een beetje te respecteren, maar zolang de bal omhoog gaat zijn we al heel tevreden.</li>
+								<li>Wedstrijdschemas zijn voor elke toernooidag willekeurig.</li>
+								<li>Helaas hebben we niet echt een prijs voor deze reeks MAAR de winnaar gaat wel met alle eer lopen en wordt vereeuwigd op social media!</li>
                             </ul>
                         </div>
 					</div>
 
 				<!-- Footer -->
                 <footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Contacteer ons</h2>
-								<div class="row">
-										<div class="col-6 col-12-medium">
-								<p><strong>Jeroen Sannen</strong><br><a target="_blank" href="http://m.me/jeroen.sannen">Facebook</a> of <a target="_blank" href="https://wa.me/32472970583">WhatsApp</a><br>+32 472 97 05 83</p>
-								</div>
-								<div class="col-6 col-12-medium">
-								<p><strong>Tim Kermans</strong><br><a target="_blank" href="http://m.me/tim.kermans">Facebook</a> of <a target="_blank" href="https://wa.me/32496200104">WhatsApp</a><br>+32 496 20 01 04</p>
-								</div>
-							</section>
-							<section>
-								<h2>Volg ons</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Belgium Winter Beachvolley</li><li>Made by <a href="http://jeroensannen.be">JS</a></li>
+					<div class="inner">
+						<section>
+							<h2>Contacteer ons</h2>
+							<div class="row">
+									<div class="col-6 col-12-medium">
+							<p><strong>Jeroen Sannen</strong><br><a target="_blank" href="http://m.me/jeroen.sannen">Facebook</a> of <a target="_blank" href="https://wa.me/32472970583">WhatsApp</a><br>+32 472 97 05 83</p>
+							</div>
+							<div class="col-6 col-12-medium">
+							<p><strong>Tim Kermans</strong><br><a target="_blank" href="http://m.me/tim.kermans">Facebook</a> of <a target="_blank" href="https://wa.me/32496200104">WhatsApp</a><br>+32 496 20 01 04</p>
+							</div>
+						</section>
+						<section>
+							<h2>Volg ons</h2>
+							<ul class="icons">
+								<!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
+								<li><a href="https://www.facebook.com/Belgiumindoorbeachvolley/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
 							</ul>
-						</div>
-					</footer>
+						</section>
+						<ul class="copyright">
+							<li>&copy; Belgium Winter Beachvolley</li><li>Made by <a href="http://jeroensannen.be">JS</a></li>
+						</ul>
+					</div>
+				</footer>
 
 			</div>
 
