--- a/indoorbeach/about.html
+++ b/indoorbeach/about.html
@@ -56,7 +56,7 @@
 							<h2>Indoor Beachvolleybal spelen in België</h2>
 							<p>In Nederland weten ze het al langer: Beachvolleybal is niet zomaar een zomers uitstapje dat je doet omdat het zaalvolleybal toevallig stil ligt. Sinds kort zijn er ook heel wat spelers in België die uitsluitend nog beachvolleybal spelen. Er wordt wekelijks 2 keer gespeeld, 1 keer in Diest en 1 keer in Duffel. Wil je graag eens een speelmoment meevolgen of heb je interesse om aan te sluiten? Contacteer Jeroen Sannen (+32 472 97 05 83, <a target="_blank" href="http://m.me/jeroen.sannen">Facebook</a> of <a target="_blank" href="https://wa.me/32472970583">WhatsApp</a>)!</p>
 							<h2>Beachvolleybaltrainingen en "school of beach"</h2>
-							<p>Tijd om je beachvolley skills wat bij te schaven? We organiseren vaak Beachvolleybaltrainingen voor onze meer gevorderde spelers. Starters of recreatieve spelers kunnen terecht in de "School of beach". Contacteer Tim Kermans (+32 496 20 01 04, <a target="_blank" href="http://m.me/tim.kermans">Facebook</a> of <a target="_blank" href="https://wa.me/32496200104">WhatsApp</a>) voor meer informatie!</p>
+							<p>Tijd om je beachvolley skills wat bij te schaven? We organiseren vaak Beachvolleybaltrainingen voor onze meer gevorderde spelers. Starters of recreatieve spelers kunnen terecht in onze "School of beach". Contacteer Tim Kermans (+32 496 20 01 04, <a target="_blank" href="http://m.me/tim.kermans">Facebook</a> of <a target="_blank" href="https://wa.me/32496200104">WhatsApp</a>) voor meer informatie!</p>
 						</div>
 					</div>
 
