--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -70,7 +70,7 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="27-oktober.html">
+									<a href="javascript:void(0);">
 										<h2>27 oktober</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel</strong><br>
@@ -85,7 +85,7 @@
 									<span class="image">
 										<img src="images/pic01.png" alt="" />
 									</span>
-									<a href="10-november.html">
+									<a href="javascript:void(0);">
 										<h2>10 november</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen</strong><br>
@@ -100,7 +100,7 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="24-november.html">
+									<a href="javascript:void(0);">
 										<h2>24 november</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel</strong><br>
@@ -115,7 +115,7 @@
 									<span class="image">
 										<img src="images/pic01.png" alt="" />
 									</span>
-									<a href="8-december.html">
+									<a href="javascript:void(0);">
 										<h2>8 december</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen</strong><br>
@@ -130,7 +130,7 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="22-december.html">
+									<a href="javascript:void(0);">
 										<h2>22 december</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel</strong><br>
@@ -145,7 +145,7 @@
 									<span class="image">
 										<img src="images/pic01.png" alt="" />
 									</span>
-									<a href="12-januari.html">
+									<a href="javascript:void(0);">
 										<h2>12 januari</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen</strong><br>
@@ -160,7 +160,7 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="26-januari.html">
+									<a href="javascript:void(0);">
 										<h2>26 januari</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel</strong><br>
@@ -175,7 +175,7 @@
 									<span class="image">
 										<img src="images/pic01.png" alt="" />
 									</span>
-									<a href="9-februari.html">
+									<a href="javascript:void(0);">
 										<h2>9 februari</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen</strong><br>
@@ -190,7 +190,7 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="23-februari.html">
+									<a href="javascript:void(0);">
 										<h2>23 februari</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel</strong><br>
@@ -205,7 +205,7 @@
 									<span class="image">
 										<img src="images/pic01.png" alt="" />
 									</span>
-									<a href="8-maart.html">
+									<a href="javascript:void(0);">
 										<h2>8 maart</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen</strong><br>
@@ -220,7 +220,7 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="22-maart.html">
+									<a href="javascript:void(0);">
 										<h2>22 maart</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel</strong><br>
