--- a/indoorbeach/ranking2019-2020.html
+++ b/indoorbeach/ranking2019-2020.html
@@ -51,15 +51,15 @@
 						<div class="inner">
 							<h1>Algemene ranking 2019 - 2020</h1>
                             <span class="image main"><img src="images/banner.png" alt="" /></span>
-                            <p>Voor de twee competitieve reeksen per zondag valt er uiteraard ook iets te winnen aan het einde van de meet! Hier kan je de algemene ranking per speler raadplegen over alle verzamelde toernooien van het Belgium Winter Beachvolley. Alle resultaten van de toernooien van seizoen 2019 - 2020 worden samengeteld, zo bekom je je puntentotaal. Wie na het laatste toernooi op 22 maart de meeste punten heeft per reeks krijgt een erg mooie prijs!</p>
+                            <p>We gebruiken voor de twee competitieve reeksen per zondag, behalve voor het eerste toernooi van het seizoen, de individuele punten van je algemene ranking om je plaats in het schema van de Belgisch/provinciaal reeks te bepalen. Hier kan je de algemene ranking per speler raadplegen over alle verzamelde toernooien van het Belgium Winter Beachvolley. Alle resultaten van de toernooien van seizoen 2019 - 2020 worden samengeteld, zo bekom je je puntentotaal. Uiteraard valt er voor deze reeksen ook iets te winnen aan het einde van de meet! Wie na het laatste toernooi op 22 maart de meeste punten heeft per reeks krijgt een erg mooie prijs!</p>
                             <h2>Hoe werkt het?</h2>
                             <ol>
                                 <li>Doe zoveel mogelijk <a href="index.html">toernooien</a> mee en probeer zo hoog mogelijk te eindigen!</li>
                                 <li>Bij elke deelname levert een laatste plaats 20 punten op per persoon. Een voorlaatste plaats 40 punten, de 3de laatste plaats 60 punten en zo verder. Wanneer er 6 teams deelnemen krijgen de winnaars dus 120 punten per persoon, de 2des 100 punten per persoon en zo verder. Het aantal punten schaalt dus met het aantal deelnemers: Op een toernooi met 12 deelnemers (het maximum) vallen er dus 240 punten per persoon te verdienen!</li>
                                 <li>Blijk je na het laatste toernooi op 22 maart het hoogste aantal punten te hebben? Proficiat! De prijsuitreiking volgt vrijwel meteen na afloop van het laatste toernooi. Niet aanwezig op het laatste toernooi maar toch gewonnen? Je kan je prijs op een later tijdstip afhalen bij de organisatie.</li>
                             </ol>
-                            <h2>Top 10 Dames Belgisch/provinciaal 2019 -2020</h2>
-                            <p>Nog geen ranking beschikbaar.</p>
+                            <h2>Dames Belgisch/provinciaal 2019 -2020</h2>
+                            <p>Nog geen ranking beschikbaar. Kom terug een kijkje nemen zodra het eerste toernooi afgelopen is.</p>
                             <!-- <div class="table-wrapper">
                                     <table>
                                         <thead>
@@ -98,8 +98,8 @@
                                         </tbody>
                                     </table>
                                 </div> -->
-                            <h2>Top 10 Heren Belgisch/provinciaal 2019 - 2020</h2>
-                            <p>Nog geen ranking beschikbaar.</p>
+                            <h2>Heren Belgisch/provinciaal 2019 - 2020</h2>
+                            <p>Nog geen ranking beschikbaar. Kom terug een kijkje nemen zodra het eerste toernooi afgelopen is.</p>
                             <!-- <div class="table-wrapper">
                                     <table>
                                         <thead>
