--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -59,13 +59,15 @@
 							<h1>Zondag 13 oktober</h1>
 							<span class="image main"><img src="images/bigpic-sch.png" alt="" /></span>
 							<section>
+								<h2>Belangrijke informatie</h2>
+								<p>Dit is het eerste toernooi van ons eerste indoor seizoen! We organiseren 3 reeksen: Heren Belgisch/provinciaal, Dames Belgisch/provinciaal en Gemengd Recreatief. We vragen aan alle teams om zeker 30 minuten voor hun eerste wedstrijd aanwezig te zijn. Het is de bedoeling dat we een betaling van je ontvangen voor aanvang van het toernooi: Ter plaatse betalen is niet mogelijk, teams die niet betaald hebben worden als "niet ingeschreven" beschouwd! Alle reeksen (ook Belgisch/provinciaal) worden willekeurig ingedeeld deze dag. Pas vanaf het volgende toernooi bepaalt de uitslag van dit toernooi mee je <a href="ranking2019-2020.html">individueel puntentotaal</a> voor de reeksen Belgisch/provinciaal. De winnaars van de Belgisch/provinciaal reeksen winnen een gratis deelname voor het toernooi in Duffel op 27 oktober! <a href="info.html">Meer informatie en reglementen</a>.</p>
 								<h2>Locatie</h2>
 								<p>Outdoorcentrum Schaffen. Zelemseweg 124, 3290 Diest.</p>
 								<p>
 								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2511.5116020572355!2d5.079425615960911!3d50.98821755635023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c138d3cac6b62f%3A0xcfc320d592cb0578!2sOutdoorcentrum%20Schaffen!5e0!3m2!1snl!2sbe!4v1568201548589!5m2!1snl!2sbe" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 								</p>
 								<h2>Inschrijven</h2>
-								<p>Inschrijven kan tot vrijdag middag 11 oktober, klokslag 12:00u. Schrijf je laat in? Breng zo snel mogelijk je betaling in orde: Niet betaald voor dat het toernooi begint is geen deelname. Ter plaatse betalen is niet mogelijk!</p>
+								<p>Inschrijven kan tot vrijdag middag 11 oktober, klokslag 12:00u. Schrijf je laat in? Breng zo snel mogelijk je betaling in orde: Niet betaald voor dat het toernooi begint = geen deelname. Ter plaatse betalen is niet mogelijk!</p>
                                 <div class="table-wrapper">
                                     <table>
                                         <thead>
@@ -78,23 +80,23 @@
                                         <tbody>
 											<tr>
 												<td class="wrap-class">Gemengd Recreatief (10u - 14u)</td>
-												<td class="hide-mobile">Alles mag in deze 2 vs 2 reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal liefhebbers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld en de winnaar krijgt een kleine prijs!</td>
+												<td class="hide-mobile">Alles mag in deze 2 vs 2 reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal liefhebbers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld en de winnaar gaat lopen met alle eer!</td>
 												<td class="wrap-class">35 EUR</td>
 											</tr>
                                             <tr>
                                                 <td class="wrap-class">Dames BEL/prov (14u - 20u)</td>
-                                                <td class="hide-mobile">Een stevige competitieve dames reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
+                                                <td class="hide-mobile">Een stevige competitieve dames reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de <a href="ranking2019-2020.html">eindrangschikking van seizoen 2019 - 2020</a>.</td>
                                                 <td class="wrap-class">35 EUR</td>
 											</tr>
 											<tr>
 												<td class="wrap-class">Heren BEL/prov (14u - 20u)</td>
-												<td class="hide-mobile">Een stevige competitieve heren reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
+												<td class="hide-mobile">Een stevige competitieve heren reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de <a href="ranking2019-2020.html">eindrangschikking van seizoen 2019 - 2020</a>.</td>
 												<td class="wrap-class">35 EUR</td>
 											</tr>
                                         </tbody>
                                     </table>
 								</div>
-								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=sf_link" class="button primary large">Inschrijven</a>
+								<p><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=sf_link" class="button primary large">Inschrijven</a>
 								<br><a href="info.html">Meer informatie</a> over de inschrijving, locaties, reglementen, ...</p>
 								<h2>Deelnemers</h2>
 								<p>Je hebt ingeschreven en betaald maar je naam staat hier niet tussen? Geen paniek, we zetten je er zo snel mogelijk bij!</p>
