--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -80,7 +80,7 @@
                                         <tbody>
 											<tr>
 												<td class="wrap-class">Gemengd Recreatief (10u - 14u)</td>
-												<td class="hide-mobile">Alles mag in deze 2 vs 2 reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal liefhebbers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld en de winnaar gaat lopen met alle eer!</td>
+												<td class="hide-mobile">Alles mag in deze 2 vs 2 reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal liefhebbers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld en de winnaar krijgt een prijs!</td>
 												<td class="wrap-class">35 EUR</td>
 											</tr>
                                             <tr>
