--- a/indoorbeach/info.html
+++ b/indoorbeach/info.html
@@ -89,7 +89,7 @@
 								<li>Alle combinaties van mannen en vrouwen zijn toegelaten. Je mag je dus perfect inschrijven als recreatief mannen team om dan waarschijnlijk kletsen te krijgen van 2 vrouwen en zo met het schaamrood op de wangen naar huis te gaan.</li>
                                 <li>We spelen zonder strikte beachvolleybalregels. Uiteraard proberen we wel de regels van het zaalvolleybal een beetje te respecteren, maar zolang de bal omhoog gaat zijn we al heel tevreden.</li>
 								<li>Wedstrijdschemas zijn voor elke toernooidag willekeurig.</li>
-								<li>Helaas hebben we niet echt een prijs voor deze reeks MAAR de winnaar gaat wel met alle eer lopen en wordt vereeuwigd op social media!</li>
+								<li>We voorzien een kleine prijs voor de winnaar!</li>
                             </ul>
                         </div>
 					</div>
