--- a/indoorbeach/info.html
+++ b/indoorbeach/info.html
@@ -63,10 +63,10 @@
                                 <li>We weten dat je heel enthousiast bent, maar inschrijven kan pas vanaf een maand voorafgaand aan een toernooi.</li>
                                 <li>Ben je een late beslisser? Inschrijven voor een toernooi kan tot vrijdag 12:00u, de week van het toernooi.</li>
                                 <li>Ter plaatse betalen is niet mogelijk. Een team dat niet op voorhand betaald heeft wordt gezien als een team dat niet meedoet aan het toernooi. Hier staan we helaas geen uitzonderingen op toe, betaal dus op tijd!</li>
-								<li>Wil je je uitschrijven voor een toernooi? Jammer, maar er kan altijd iets tussenkomen natuurlijk: contacteer de organisatie zo snel mogelijk! Uitschrijven voor een toernooi kan tot vrijdag 12:00u, de week van het toernooi. Je krijgt dan zonder problemen je geld integraal terug. Latere afzeggingen laten we enkel toe in heel uitzonderlijke omstandigheden: Zeg je later af dan vrijdag 12:00u, de week van het toernooi? Dan krijg je in principe je geld niet terug!</li>
+								<li>Wil je je uitschrijven voor een toernooi? Jammer, maar er kan altijd iets tussenkomen natuurlijk: contacteer de organisatie zo snel mogelijk! Uitschrijven voor een toernooi kan tot vrijdag 12:00u, de week van het toernooi. Je krijgt dan zonder problemen je geld integraal terug. Zeg je later af dan vrijdag 12:00u, de week van het toernooi? Dan krijg je je geld helaas niet terug!</li>
 								<li>In het uitzonderlijke geval dat het toernooi of een bepaalde reeks niet zou doorgaan krijg je je inschrijvingsgeld integraal terug.</li>
 								<li>Waarom werken onze betalingen op deze manier? We proberen dure betalingssystemen te vermijden want dit levert enkel maar meer kosten op voor ons. Deze kosten zouden we moeten doorrekenen aan de mensen die inschrijven. Op deze manier houden we het inschrijvingsgeld laag.</li>
-								<li>35 EUR is toch niet weinig geld voor een beachvolleybal toernooi? Jawel! Hou er rekening mee dat we binnen spelen in een verwarmde hal met verlichting en douches. De uitbater van deze hal maakt dus een hoop kosten. De toernooi organisatie maakt (helaas) 0.0 EUR winst, al het inschrijvingsgeld gaat rechtstreeks naar de accomodaties en de 2 eindprijzen voor de BEL/prov reeksen.</li>
+								<li>35 EUR is toch niet weinig geld voor een beachvolleybal toernooi? Jawel! Hou er rekening mee dat we binnen spelen in een verwarmde hal met verlichting en douches. De uitbater van deze hal maakt dus een hoop kosten. De toernooi organisatie maakt (helaas) 0.0 EUR winst, al het inschrijvingsgeld gaat rechtstreeks naar de accomodaties en eventuele prijzen.</li>
 							</ul>
                             <h2>Locaties</h2>
                             <ul>
@@ -86,10 +86,10 @@
                             </ul>
                             <h2>Reglement Gemengd recreatief reeks</h2>
                             <ul>
-								<li>Alle combinaties van mannen en vrouwen zijn toegelaten. Je mag je dus perfect inschrijven als recreatief mannen team om dan waarschijnlijk kletsen te krijgen van 2 vrouwen en zo met het schaamrood op de wangen naar huis te gaan.</li>
+								<li>Alle combinaties van mannen en vrouwen zijn toegelaten. Je mag je dus perfect inschrijven als recreatief mannen team om dan waarschijnlijk kletsen te krijgen van 2 dames en zo met het schaamrood op de wangen naar huis te gaan.</li>
                                 <li>We spelen zonder strikte beachvolleybalregels. Uiteraard proberen we wel de regels van het zaalvolleybal een beetje te respecteren, maar zolang de bal omhoog gaat zijn we al heel tevreden.</li>
-								<li>Wedstrijdschemas zijn voor elke toernooidag willekeurig.</li>
-								<li>We voorzien een kleine prijs voor de winnaar!</li>
+								<li>Wedstrijdschemas zijn voor elke toernooidag willekeurig en worden opgemaakt in volgorde van aankomst. We proberen speeltijd en plezier te maximaliseren.</li>
+								<li>We voorzien een prijs voor de winnaar!</li>
                             </ul>
                         </div>
 					</div>
