--- a/indoorbeach/template-schaffen.html
+++ b/indoorbeach/template-schaffen.html
@@ -56,15 +56,15 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Zondag 13 oktober in Duffel</h1>
-							<span class="image main"><img src="images/bigpic-pol.png" alt="" /></span>
+							<h1>Zondag 13 oktober</h1>
+							<span class="image main"><img src="images/bigpic-sch.png" alt="" /></span>
 							<section>
 								<h2>Belangrijke informatie</h2>
-								<p>Dit is het eerste toernooi van ons eerste indoor seizoen! We organiseren 3 reeksen: Heren Belgisch/provinciaal, Dames Belgisch/provinciaal en Gemengd Recreatief. We vragen aan alle teams om zeker 30 minuten voor hun eerste wedstrijd aanwezig te zijn. Het is de bedoeling dat we een betaling van je ontvangen voor aanvang van het toernooi: Ter plaatse betalen is niet mogelijk, teams die niet betaald hebben worden als "niet ingeschreven" beschouwd! Alle reeksen (ook Belgisch/provinciaal) worden willekeurig ingedeeld deze dag. Pas vanaf het volgende toernooi bepaalt de uitslag van dit toernooi mee je <a href="ranking2019-2020.html">individueel puntentotaal</a> voor de reeksen Belgisch/provinciaal. De winnaars van de Belgisch/provinciaal reeksen winnen een gratis deelname voor het toernooi in Diest op 27 oktober! <a href="info.html">Meer informatie en reglementen</a>.</p>
+								<p>Dit is het eerste toernooi van ons eerste indoor seizoen! We organiseren 3 reeksen: Heren Belgisch/provinciaal, Dames Belgisch/provinciaal en Gemengd Recreatief. We vragen aan alle teams om zeker 30 minuten voor hun eerste wedstrijd aanwezig te zijn. Het is de bedoeling dat we een betaling van je ontvangen voor aanvang van het toernooi: Ter plaatse betalen is niet mogelijk, teams die niet betaald hebben worden als "niet ingeschreven" beschouwd! Alle reeksen (ook Belgisch/provinciaal) worden willekeurig ingedeeld deze dag. Pas vanaf het volgende toernooi bepaalt de uitslag van dit toernooi mee je <a href="ranking2019-2020.html">individueel puntentotaal</a> voor de reeksen Belgisch/provinciaal. De winnaars van de Belgisch/provinciaal reeksen winnen een gratis deelname voor het toernooi in Duffel op 27 oktober! <a href="info.html">Meer informatie en reglementen</a>.</p>
 								<h2>Locatie</h2>
-								<p>TC De Pollepel. Naalstraat 43C, 2570 Duffel.</p>
+								<p>Outdoorcentrum Schaffen. Zelemseweg 124, 3290 Diest.</p>
 								<p>
-									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2506.3815980133495!2d4.510402915985765!3d51.08296474946737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3e577c76f9c85%3A0x6fa344d3fca2ac8!2sTC%20De%20Pollepel!5e0!3m2!1snl!2sbe!4v1568824798155!5m2!1snl!2sbe" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2511.5116020572355!2d5.079425615960911!3d50.98821755635023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c138d3cac6b62f%3A0xcfc320d592cb0578!2sOutdoorcentrum%20Schaffen!5e0!3m2!1snl!2sbe!4v1568201548589!5m2!1snl!2sbe" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 								</p>
 								<h2>Inschrijven</h2>
 								<p>Inschrijven kan tot vrijdag middag 11 oktober, klokslag 12:00u. Schrijf je laat in? Breng zo snel mogelijk je betaling in orde: Niet betaald voor dat het toernooi begint = geen deelname. Ter plaatse betalen is niet mogelijk!</p>
