--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -97,7 +97,8 @@
                                     </table>
 								</div>
 								<p><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=sf_link" class="button primary large">Inschrijven</a>
-								<br><a href="info.html">Meer informatie</a> over de inschrijving, locaties, reglementen, ...</p>
+									<br><sup><a href="info.html">Meer informatie</a> over de inschrijving, locaties, reglementen, ...</sup>
+								<br><sup><a target="_blank" href="https://www.facebook.com/events/515351975897155/">Nodig al je vrienden uit via <span class="icon brands style1 fa-facebook-f"><span class="label">Facebook event</span></span></a></sup></p>
 								<h2>Deelnemers</h2>
 								<p>Je hebt ingeschreven en betaald maar je naam staat hier niet tussen? Geen paniek, we zetten je er zo snel mogelijk bij!</p>
 								<h2>Wedstrijdschemas</h2>
@@ -126,12 +127,12 @@
 							<h2>Volg ons</h2>
 							<ul class="icons">
 								<!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
-								<li><a href="https://www.facebook.com/Belgiumindoorbeachvolley/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a target="_blank" href="https://www.facebook.com/Belgiumindoorbeachvolley/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
 							</ul>
 						</section>
 						<ul class="copyright">
-							<li>&copy; Belgium Winter Beachvolley</li><li>Made by <a href="http://jeroensannen.be">JS</a></li>
+							<li>&copy; Belgium Winter Beachvolley</li><li>Made by <a target="_blank" href="http://jeroensannen.be">JS</a></li>
 						</ul>
 					</div>
 				</footer>
