--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -60,7 +60,7 @@
 							<span class="image main"><img src="images/bigpic-pol.png" alt="" /></span>
 							<section>
 								<h2>Belangrijke informatie</h2>
-								<p>Dit is het eerste toernooi van ons eerste indoor seizoen! We organiseren 3 reeksen: Heren Belgisch/provinciaal, Dames Belgisch/provinciaal en Gemengd Recreatief. We vragen aan alle teams om zeker 30 minuten voor hun eerste wedstrijd aanwezig te zijn. Het is de bedoeling dat we een betaling van je ontvangen voor aanvang van het toernooi: Ter plaatse betalen is niet mogelijk, teams die niet betaald hebben worden als "niet ingeschreven" beschouwd! Alle reeksen (ook Belgisch/provinciaal) worden willekeurig ingedeeld deze dag. Pas vanaf het volgende toernooi bepaalt de uitslag van dit toernooi mee je <a href="ranking2019-2020.html">individueel puntentotaal</a> voor de reeksen Belgisch/provinciaal. De winnaars van de Belgisch/provinciaal reeksen winnen een gratis deelname voor het toernooi in Diest op 27 oktober! <a href="info.html">Meer informatie en reglementen</a>.</p>
+								<p>Dit is het eerste toernooi van ons eerste indoor seizoen! We organiseren 3 reeksen: Heren Belgisch/provinciaal, Dames Belgisch/provinciaal en Gemengd Recreatief. We vragen aan alle teams om zeker 30 minuten voor hun eerste wedstrijd aanwezig te zijn. Het is de bedoeling dat we een betaling van je ontvangen voor aanvang van het toernooi: Ter plaatse betalen is niet mogelijk, teams die niet betaald hebben worden als "niet ingeschreven" beschouwd! Alle reeksen (ook Belgisch/provinciaal) worden willekeurig ingedeeld deze dag. Pas vanaf het volgende toernooi bepaalt de uitslag van dit toernooi mee je <a href="ranking2019-2020.html">individueel puntentotaal</a> voor de reeksen Belgisch/provinciaal. Er valt een prijs te verdienen in elke reeks!<a href="info.html">Meer informatie en reglementen</a>.</p>
 								<h2>Locatie</h2>
 								<p>TC De Pollepel. Naalstraat 43C, 2570 Duffel.</p>
 								<p>
@@ -85,12 +85,12 @@
 											</tr>
                                             <tr>
                                                 <td class="wrap-class">Dames BEL/prov (14u - 20u)</td>
-                                                <td class="hide-mobile">Een stevige competitieve dames reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de <a href="ranking2019-2020.html">eindrangschikking van seizoen 2019 - 2020</a>.</td>
+                                                <td class="hide-mobile">Een stevige competitieve dames reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, er valt een prijs te winnen en je kan punten verdienen voor de <a href="ranking2019-2020.html">eindrangschikking van seizoen 2019 - 2020</a>.</td>
                                                 <td class="wrap-class">35 EUR</td>
 											</tr>
 											<tr>
 												<td class="wrap-class">Heren BEL/prov (14u - 20u)</td>
-												<td class="hide-mobile">Een stevige competitieve heren reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de <a href="ranking2019-2020.html">eindrangschikking van seizoen 2019 - 2020</a>.</td>
+												<td class="hide-mobile">Een stevige competitieve heren reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, er valt een prijs te winnen en je kan punten verdienen voor de <a href="ranking2019-2020.html">eindrangschikking van seizoen 2019 - 2020</a>.</td>
 												<td class="wrap-class">35 EUR</td>
 											</tr>
                                         </tbody>
