--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<nav>
 							<ul>
 								<li><a href="#About" class="button icon fa-user border-fix">About</a></li>
-								<li><a href="#Work" class="button icon fa-briefcase border-fix">Work</a></li>
-								<li><a href="#News" class="button icon fa-twitter border-fix">News</a></li>
+								<li><a href="#Work" class="button icon fa-briefcase border-fix">Portfolio</a></li>
+								<li><a href="#News" class="button icon fa-twitter border-fix">Twitter</a></li>
 								<!-- <li><a href="#contact">Contact</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -65,15 +65,15 @@
 								<hr />
 								<ul class="actions">
 									<li><a href="#" class="button icon fa-arrow-left">Back</a></li>
-									<li><a href="#Work" class="button icon fa-briefcase">Work</a></li>
-									<li><a href="#News" class="button icon fa-twitter">News</a></li>
+									<li><a href="#Work" class="button icon fa-briefcase">Portfolio</a></li>
+									<li><a href="#News" class="button icon fa-twitter">Twitter</a></li>
 									<li><a href="mailto:jeroensannen@hotmail.com?subject=Hey%20Jeroen!&body=Wow,%20I%20think%20you%20have%20an%20awesome%20website!%20But%20I%20do%20have%20a%20question:%20..." class="button icon fa-question-circle">Help</a></li>
 								</ul>
 							</article>
 
 						<!-- Work -->
 							<article id="Work">
-								<h2 class="major">My Work</h2>
+								<h2 class="major">My Portfolio</h2>
 								<p>With around 13 years of experience in web development and graphic design and more then 9 years of hands-on experience in User Experience Design, I'm working my way up to become a real <strong>jack of all trades</strong>. I'm currently fulltime employed as UX consultant for <a href="http://www.continuous.be" target="_blank">Continuous</a>. On this page you can see a <strong>summary</strong> of some of my more exciting projects.</p>
 								<hr />
 								<h3>Helping the digital revolution at VDAB</h3>
@@ -124,21 +124,29 @@
 								<ul class="actions">
 									<li><a href="#" class="button icon fa-arrow-left">Back</a></li>
 									<li><a href="#About" class="button icon fa-user">About</a></li>
-									<li><a href="#News" class="button icon fa-twitter">News</a></li>
+									<li><a href="#News" class="button icon fa-twitter">Twitter</a></li>
 									<li><a href="mailto:jeroensannen@hotmail.com?subject=Hey%20Jeroen!&body=Wow,%20I%20think%20you%20have%20an%20awesome%20website!%20But%20I%20do%20have%20a%20question:%20..." class="button icon fa-question-circle">Help</a></li>
 								</ul>
 							</article>
 
 						<!-- About -->
-							<article id="News">
-								<h2 class="major">News</h2>
+							<article id="News" style="background-color: white;">
+								<h2 class="major" style="color: #1a1e23;border-bottom: solid 1px #1a1e23;">Twitter</h2>
 								<a class="twitter-timeline" href="https://twitter.com/Geronimo206?ref_src=twsrc%5Etfw">Tweets by Geronimo206</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-								<hr />
+								<style>
+									.timeline-Widget {
+										border-radius: 0!important;
+									}
+									#news .close {
+										color: #1a1e23;
+									}
+								</style>
+								<hr style="border-bottom: solid 1px #1a1e23;" />
 								<ul class="actions">
-									<li><a href="#" class="button icon fa-arrow-left">Back</a></li>
-									<li><a href="#About" class="button icon fa-user">About</a></li>
-									<li><a href="#Work" class="button icon fa-briefcase">Work</a></li>
-									<li><a href="mailto:jeroensannen@hotmail.com?subject=Hey%20Jeroen!&body=Wow,%20I%20think%20you%20have%20an%20awesome%20website!%20But%20I%20do%20have%20a%20question:%20..." class="button icon fa-question-circle">Help</a></li>
+									<li><a href="#" class="button icon fa-arrow-left" style="color: #1a1e23;box-shadow: inset 0 0 0 1px #1a1e23;">Back</a></li>
+									<li><a href="#About" class="button icon fa-user" style="color: #1a1e23;box-shadow: inset 0 0 0 1px #1a1e23;">About</a></li>
+									<li><a href="#Work" class="button icon fa-briefcase" style="color: #1a1e23;box-shadow: inset 0 0 0 1px #1a1e23;">Portfolio</a></li>
+									<li><a href="mailto:jeroensannen@hotmail.com?subject=Hey%20Jeroen!&body=Wow,%20I%20think%20you%20have%20an%20awesome%20website!%20But%20I%20do%20have%20a%20question:%20..." class="button icon fa-question-circle" style="color: #1a1e23;box-shadow: inset 0 0 0 1px #1a1e23;">Help</a></li>
 								</ul>
 							</article>
 
