--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
 										border-radius: 0!important;
 									}
 									#news .close {
-										color: #1a1e23;
+										color: #1a1e23!important;
 									}
 								</style>
 								<hr style="border-bottom: solid 1px #1a1e23;" />
 								<ul class="actions">
-									<li><a href="#" class="button icon fa-arrow-left" style="color: #1a1e23;box-shadow: inset 0 0 0 1px #1a1e23;">Back</a></li>
-									<li><a href="#About" class="button icon fa-user" style="color: #1a1e23;box-shadow: inset 0 0 0 1px #1a1e23;">About</a></li>
-									<li><a href="#Work" class="button icon fa-briefcase" style="color: #1a1e23;box-shadow: inset 0 0 0 1px #1a1e23;">Portfolio</a></li>
-									<li><a href="mailto:jeroensannen@hotmail.com?subject=Hey%20Jeroen!&body=Wow,%20I%20think%20you%20have%20an%20awesome%20website!%20But%20I%20do%20have%20a%20question:%20..." class="button icon fa-question-circle" style="color: #1a1e23;box-shadow: inset 0 0 0 1px #1a1e23;">Help</a></li>
+									<li><a href="#" class="button icon fa-arrow-left" style="color: #1a1e23!important;box-shadow: inset 0 0 0 1px #1a1e23;">Back</a></li>
+									<li><a href="#About" class="button icon fa-user" style="color: #1a1e23!important;box-shadow: inset 0 0 0 1px #1a1e23;">About</a></li>
+									<li><a href="#Work" class="button icon fa-briefcase" style="color: #1a1e23!important;box-shadow: inset 0 0 0 1px #1a1e23;">Portfolio</a></li>
+									<li><a href="mailto:jeroensannen@hotmail.com?subject=Hey%20Jeroen!&body=Wow,%20I%20think%20you%20have%20an%20awesome%20website!%20But%20I%20do%20have%20a%20question:%20..." class="button icon fa-question-circle" style="color: #1a1e23!important;box-shadow: inset 0 0 0 1px #1a1e23;">Help</a></li>
 								</ul>
 							</article>
 
