more importants for your consideration

--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
 									.timeline-Widget {
 										border-radius: 0!important;
 									}
-									#news .close {
-										color: #1a1e23!important;
+									article#news div.close {
+										background: #1a1e23!important;
+    									border-bottom-left-radius: 5px!important;
 									}
 								</style>
 								<hr style="border-bottom: solid 1px #1a1e23;" />
