test actions top

--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
 
 						<!-- About -->
 							<article id="News" style="background-color: white;">
+								<ul class="actions">
+									<li><a href="#" class="button icon fa-arrow-left" style="color: #1a1e23!important;box-shadow: inset 0 0 0 1px #1a1e23;">Back</a></li>
+									<li><a href="#About" class="button icon fa-user" style="color: #1a1e23!important;box-shadow: inset 0 0 0 1px #1a1e23;">About</a></li>
+									<li><a href="#Work" class="button icon fa-briefcase" style="color: #1a1e23!important;box-shadow: inset 0 0 0 1px #1a1e23;">Portfolio</a></li>
+									<li><a href="mailto:jeroensannen@hotmail.com?subject=Hey%20Jeroen!&body=Wow,%20I%20think%20you%20have%20an%20awesome%20website!%20But%20I%20do%20have%20a%20question:%20..." class="button icon fa-question-circle" style="color: #1a1e23!important;box-shadow: inset 0 0 0 1px #1a1e23;">Help</a></li>
+								</ul>
 								<a class="twitter-timeline" href="https://twitter.com/Geronimo206?ref_src=twsrc%5Etfw">Tweets by Geronimo206</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 								<hr style="border-bottom: solid 1px #1a1e23;" />
 								<ul class="actions">
