--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-rocket"></span>
+							<span class="icon fa-solar-system"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
