--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<ul>
 								<li><a href="#About" class="button icon fa-user border-fix">About</a></li>
 								<li><a href="#Work" class="button icon fa-briefcase border-fix">Portfolio</a></li>
-								<li><a href="#News" class="button icon fa-twitter border-fix">Twitter</a></li>
+								<!-- <li><a href="#News" class="button icon fa-twitter border-fix">Twitter</a></li> -->
 								<!-- <li><a href="#contact">Contact</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -66,7 +66,7 @@
 								<ul class="actions">
 									<li><a href="#" class="button icon fa-arrow-left">Back</a></li>
 									<li><a href="#Work" class="button icon fa-briefcase">Portfolio</a></li>
-									<li><a href="#News" class="button icon fa-twitter">Twitter</a></li>
+									<!-- <li><a href="#News" class="button icon fa-twitter">Twitter</a></li> -->
 									<li><a href="mailto:jeroensannen@hotmail.com?subject=Hey%20Jeroen!&body=Wow,%20I%20think%20you%20have%20an%20awesome%20website!%20But%20I%20do%20have%20a%20question:%20..." class="button icon fa-question-circle">Help</a></li>
 								</ul>
 							</article>
@@ -124,7 +124,7 @@
 								<ul class="actions">
 									<li><a href="#" class="button icon fa-arrow-left">Back</a></li>
 									<li><a href="#About" class="button icon fa-user">About</a></li>
-									<li><a href="#News" class="button icon fa-twitter">Twitter</a></li>
+									<!-- <li><a href="#News" class="button icon fa-twitter">Twitter</a></li> -->
 									<li><a href="mailto:jeroensannen@hotmail.com?subject=Hey%20Jeroen!&body=Wow,%20I%20think%20you%20have%20an%20awesome%20website!%20But%20I%20do%20have%20a%20question:%20..." class="button icon fa-question-circle">Help</a></li>
 								</ul>
 							</article>
