--- a/index.html
+++ b/index.html
@@ -427,19 +427,18 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright"><a href="https://www.youtube.com/watch?v=3NPATRzaF00" target="_blank">Art gets what it wants and art gets what it deserves</a></p>
+						<p class="copyright"><a href="https://www.youtube.com/watch?v=F7Vri9rfwwM" target="_blank">By any means necessary</a></p>
 						<ul class="icons">
-							<li><a href="mailto:jeroensannen@hotmail.com?Subject=Hey%20Jeroen!" class="icon fa-envelope" title="Mail"><span class="label">Mail</span></a></li>
 							<li><a href="tel:0032472970583" class="icon fa-phone" title="Phone"><span class="label">Phone</span></a></li>
-							<li><a href="skype:jeroen_sannen?call" class="icon fa-skype" title="Skype"><span class="label">Skype</span></a></li>
 							<li><a href="http://www.linkedin.com/in/jeroensannen" class="icon fa-linkedin" target="_blank" title="LinkedIn"><span class="label">LinkedIn</span></a></li>
 							<li><a href="http://www.twitter.com/Geronimo206" class="icon fa-twitter" target="_blank" title="Twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="http://www.facebook.com/jeroen.sannen" class="icon fa-facebook" target="_blank" title="Facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="http://www.instagram.com/geronimo206" class="icon fa-instagram" target="_blank" title="Instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="http://www.last.fm/user/Geronimo206" class="icon fa-lastfm" target="_blank" title="Last.fm"><span class="label">Last.fm</span></a></li>
-							<li><a href="http://www.trakt.tv/users/geronimo206" class="icon fa-television" target="_blank" title="Trakt.tv"><span class="label">Trakt.tv</span></a></li>
 							<li><a href="http://www.soundcloud.com/geronimo206" class="icon fa-soundcloud" target="_blank" title="Soundcloud"><span class="label">Soundcloud</span></a></li>
+							<li><a href="https://www.goodreads.com/user/show/162438186-jeroen-sannen" class="icon fa-book" target="_blank" title="Goodreads"><span class="label">Goodreads</span></a></li>
 							<li><a href="https://www.facebook.com/BeachvolleybalteamSannenTorfs" class="icon fa-sun-o" target="_blank" title="Beachvolley"><span class="label">Beachvolleybalteam Sannen - Torfs</span></a></li>
+							<li><a href="https://www.tennisvlaanderen.be/dashboard?userId=628006" class="icon fa-star" target="_blank" title="Padel"><span class="label">Padel</span></a></li>
 						</ul>
 					</footer>
 
